@@ -4,9 +4,14 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import tn.esprit.pi.domain.*;
+import tn.esprit.pi.dto.JoinRequestDTO;
+import tn.esprit.pi.dto.PlayerSummaryDTO;
+import tn.esprit.pi.dto.TeamDTO;
 import tn.esprit.pi.repository.*;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,69 +23,162 @@ public class TeamServiceImpl implements ITeamService {
     private final PlayerProfileRepository playerProfileRepository;
     private final JoinRequestRepository joinRequestRepository;
 
+    // ── Mapping helpers ───────────────────────────────────────────────────────
+
+    private PlayerSummaryDTO toPlayerDTO(PlayerProfile p) {
+        if (p == null) return null;
+        User u = p.getUser();
+        return PlayerSummaryDTO.builder()
+                .id(u != null ? u.getId() : null)
+                .fullName(u != null ? u.getUsername() : null)
+                .email(u != null ? u.getEmail() : null)
+                .level(p.getLevel() != null ? p.getLevel().name() : null)
+                .build();
+    }
+
+    private TeamDTO toTeamDTO(Team t) {
+        List<PlayerSummaryDTO> players = t.getPlayerProfiles() == null ? List.of()
+                : t.getPlayerProfiles().stream()
+                        .map(this::toPlayerDTO)
+                        .collect(Collectors.toList());
+
+        String captainName = null;
+        if (t.getCaptainId() != null) {
+            captainName = userRepository.findById(t.getCaptainId())
+                    .map(User::getUsername).orElse(null);
+        }
+
+        String coachName = null;
+        Long   coachId   = null;
+        if (t.getCoachProfile() != null && t.getCoachProfile().getUser() != null) {
+            coachId   = t.getCoachProfile().getUser().getId();
+            coachName = t.getCoachProfile().getUser().getUsername();
+        }
+
+        return TeamDTO.builder()
+                .id(t.getId())
+                .name(t.getName())
+                .logo(t.getLogo())
+                .type(t.getSportType() != null ? t.getSportType().name() : null)
+                .captainId(t.getCaptainId())
+                .captainName(captainName)
+                .coachId(coachId)
+                .coachName(coachName)
+                .players(players)
+                .playerCount(players.size())
+                .createdAt(t.getCreatedAt())
+                .build();
+    }
+
+    private JoinRequestDTO toJoinRequestDTO(JoinRequest jr) {
+        JoinRequestDTO.TeamRef teamRef = null;
+        if (jr.getTeam() != null) {
+            Team t = jr.getTeam();
+            teamRef = JoinRequestDTO.TeamRef.builder()
+                    .id(t.getId())
+                    .name(t.getName())
+                    .type(t.getSportType() != null ? t.getSportType().name() : null)
+                    .captainId(t.getCaptainId())
+                    .build();
+        }
+
+        PlayerSummaryDTO playerDTO = null;
+        if (jr.getPlayer() != null) {
+            User u = jr.getPlayer();
+            playerDTO = PlayerSummaryDTO.builder()
+                    .id(u.getId())
+                    .fullName(u.getUsername())
+                    .email(u.getEmail())
+                    .build();
+        }
+
+        return JoinRequestDTO.builder()
+                .id(jr.getId())
+                .team(teamRef)
+                .player(playerDTO)
+                .type(jr.getType())
+                .status(jr.getStatus())
+                .build();
+    }
+
+    // ── CRUD ──────────────────────────────────────────────────────────────────
+
     @Override
-    public Team createTeam(Team team) {
+    public TeamDTO createTeam(TeamDTO dto) {
+        Team team = new Team();
+        team.setName(dto.getName());
+        team.setLogo(dto.getLogo());
+        if (dto.getType() != null && !dto.getType().isBlank()) {
+            team.setSportType(SportType.valueOf(dto.getType()));
+        }
+        team.setCaptainId(dto.getCaptainId());
+        team.setCreatedAt(java.time.LocalDateTime.now());
+
         Team saved = teamRepository.save(team);
+
+        // Auto-add captain as first player
         if (saved.getCaptainId() != null) {
             playerProfileRepository.findByUserId(saved.getCaptainId()).ifPresent(profile -> {
-                if (saved.getPlayerProfiles() == null) {
-                    saved.setPlayerProfiles(new java.util.HashSet<>());
-                }
-                if (!saved.getPlayerProfiles().contains(profile)) {
-                    saved.getPlayerProfiles().add(profile);
-                    teamRepository.save(saved);
-                }
+                if (saved.getPlayerProfiles() == null) saved.setPlayerProfiles(new HashSet<>());
+                saved.getPlayerProfiles().add(profile);
+                teamRepository.save(saved);
             });
         }
-        return saved;
+
+        return toTeamDTO(saved);
     }
 
     @Override
-    public Team updateTeam(Long id, Team team) {
+    public TeamDTO updateTeam(Long id, TeamDTO dto) {
         Team existing = teamRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
-        existing.setName(team.getName());
-        if (team.getLogo() != null && !team.getLogo().isBlank()) {
-            existing.setLogo(team.getLogo());
+        existing.setName(dto.getName());
+        if (dto.getLogo() != null && !dto.getLogo().isBlank()) {
+            existing.setLogo(dto.getLogo());
         }
-        existing.setSportType(team.getSportType());
-        return teamRepository.save(existing);
+        if (dto.getType() != null && !dto.getType().isBlank()) {
+            existing.setSportType(SportType.valueOf(dto.getType()));
+        }
+        return toTeamDTO(teamRepository.save(existing));
     }
 
     @Override
-    public Team getTeamById(Long id) {
-        return teamRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Team not found"));
+    public TeamDTO getTeamById(Long id) {
+        return toTeamDTO(teamRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Team not found")));
     }
 
     @Override
-    public List<Team> getAllTeams() {
-        return teamRepository.findAll();
+    public List<TeamDTO> getAllTeams() {
+        return teamRepository.findAll().stream()
+                .map(this::toTeamDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteTeam(Long id) {
         Team team = teamRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
-        // Remove all player memberships (owning side)
         if (team.getPlayerProfiles() != null) {
             team.getPlayerProfiles().clear();
             teamRepository.save(team);
         }
-        // Delete all join requests
         joinRequestRepository.deleteByTeam(team);
         teamRepository.delete(team);
     }
 
     @Override
-    public List<Team> getTeamsByUserId(Long userId) {
+    public List<TeamDTO> getTeamsByUserId(Long userId) {
         return playerProfileRepository.findByUserId(userId)
-                .map(p -> p.getTeams() != null ? p.getTeams().stream().toList() : List.<Team>of())
-                .orElse(List.of());
+                .map(p -> p.getTeams() == null ? List.<Team>of() : p.getTeams().stream().toList())
+                .orElse(List.of())
+                .stream().map(this::toTeamDTO).collect(Collectors.toList());
     }
 
+    // ── Join requests ─────────────────────────────────────────────────────────
+
     @Override
-    public JoinRequest requestJoin(Long teamId, Long playerId) {
+    public JoinRequestDTO requestJoin(Long teamId, Long playerId) {
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
         User player = userRepository.findById(playerId)
@@ -91,16 +189,15 @@ public class TeamServiceImpl implements ITeamService {
                 .orElse(false);
         if (alreadyMember) throw new RuntimeException("Already a member of this team");
 
-        boolean alreadyRequested = joinRequestRepository
-                .existsByTeamAndPlayerAndStatusAndType(team, player, "PENDING", "REQUEST");
-        if (alreadyRequested) throw new RuntimeException("Request already sent");
+        if (joinRequestRepository.existsByTeamAndPlayerAndStatusAndType(team, player, "PENDING", "REQUEST"))
+            throw new RuntimeException("Request already sent");
 
-        return joinRequestRepository.save(JoinRequest.builder()
-                .team(team).player(player).type("REQUEST").status("PENDING").build());
+        return toJoinRequestDTO(joinRequestRepository.save(
+                JoinRequest.builder().team(team).player(player).type("REQUEST").status("PENDING").build()));
     }
 
     @Override
-    public JoinRequest invitePlayer(Long teamId, Long playerId) {
+    public JoinRequestDTO invitePlayer(Long teamId, Long playerId) {
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
         User player = userRepository.findById(playerId)
@@ -111,26 +208,27 @@ public class TeamServiceImpl implements ITeamService {
                 .orElse(false);
         if (alreadyMember) throw new RuntimeException("Already a member of this team");
 
-        boolean alreadyInvited = joinRequestRepository
-                .existsByTeamAndPlayerAndStatusAndType(team, player, "PENDING", "INVITATION");
-        if (alreadyInvited) throw new RuntimeException("Invitation already sent");
+        if (joinRequestRepository.existsByTeamAndPlayerAndStatusAndType(team, player, "PENDING", "INVITATION"))
+            throw new RuntimeException("Invitation already sent");
 
-        return joinRequestRepository.save(JoinRequest.builder()
-                .team(team).player(player).type("INVITATION").status("PENDING").build());
+        return toJoinRequestDTO(joinRequestRepository.save(
+                JoinRequest.builder().team(team).player(player).type("INVITATION").status("PENDING").build()));
     }
 
     @Override
-    public List<JoinRequest> getPendingRequestsForTeam(Long teamId) {
+    public List<JoinRequestDTO> getPendingRequestsForTeam(Long teamId) {
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
-        return joinRequestRepository.findByTeamAndStatusAndType(team, "PENDING", "REQUEST");
+        return joinRequestRepository.findByTeamAndStatusAndType(team, "PENDING", "REQUEST")
+                .stream().map(this::toJoinRequestDTO).collect(Collectors.toList());
     }
 
     @Override
-    public List<JoinRequest> getInvitationsForPlayer(Long userId) {
+    public List<JoinRequestDTO> getInvitationsForPlayer(Long userId) {
         User player = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found"));
-        return joinRequestRepository.findByPlayerAndStatusAndType(player, "PENDING", "INVITATION");
+        return joinRequestRepository.findByPlayerAndStatusAndType(player, "PENDING", "INVITATION")
+                .stream().map(this::toJoinRequestDTO).collect(Collectors.toList());
     }
 
     @Override
@@ -140,12 +238,9 @@ public class TeamServiceImpl implements ITeamService {
         request.setStatus("ACCEPTED");
         joinRequestRepository.save(request);
 
-        Long playerId = request.getPlayer().getId();
         Team team = request.getTeam();
-        playerProfileRepository.findByUserId(playerId).ifPresent(profile -> {
-            if (team.getPlayerProfiles() == null) {
-                team.setPlayerProfiles(new java.util.HashSet<>());
-            }
+        playerProfileRepository.findByUserId(request.getPlayer().getId()).ifPresent(profile -> {
+            if (team.getPlayerProfiles() == null) team.setPlayerProfiles(new HashSet<>());
             if (!team.getPlayerProfiles().contains(profile)) {
                 team.getPlayerProfiles().add(profile);
                 teamRepository.save(team);
@@ -161,8 +256,10 @@ public class TeamServiceImpl implements ITeamService {
         joinRequestRepository.save(request);
     }
 
+    // ── Captain management ────────────────────────────────────────────────────
+
     @Override
-    public Team transferCaptain(Long teamId, Long newCaptainId) {
+    public TeamDTO transferCaptain(Long teamId, Long newCaptainId) {
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new RuntimeException("Team not found"));
         boolean isMember = playerProfileRepository.findByUserId(newCaptainId)
@@ -170,7 +267,7 @@ public class TeamServiceImpl implements ITeamService {
                 .orElse(false);
         if (!isMember) throw new RuntimeException("Player is not a member of this team");
         team.setCaptainId(newCaptainId);
-        return teamRepository.save(team);
+        return toTeamDTO(teamRepository.save(team));
     }
 
     @Override
@@ -185,10 +282,17 @@ public class TeamServiceImpl implements ITeamService {
         });
     }
 
+    // ── Players list ──────────────────────────────────────────────────────────
+
     @Override
-    public List<User> getAllPlayers() {
+    public List<PlayerSummaryDTO> getAllPlayers() {
         return userRepository.findAll().stream()
                 .filter(u -> u.getRole() == Role.PLAYER)
-                .toList();
+                .map(u -> PlayerSummaryDTO.builder()
+                        .id(u.getId())
+                        .fullName(u.getUsername())
+                        .email(u.getEmail())
+                        .build())
+                .collect(Collectors.toList());
     }
 }
